# RepoFlow

./: .dockerignore  .env.example  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  project.md  vite.config.ts
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: cache.rs  config.rs  fetcher.rs  github.rs  lib.rs  main.rs  metrics.rs  querier.rs  types.rs
backend/tests/: api_tests.rs
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  types.ts
frontend/src/components/: About.tsx  FlowChart.tsx  PopularRepoChip.tsx  StatsCards.test.tsx  StatsCards.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx
frontend/src/utils/: api.test.ts  api.ts  metrics.ts  parser.test.ts  parser.ts  utils.ts
src/: App.tsx  index.css  types.ts
src/components/: FlowChart.tsx  StatsCards.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx
src/utils/: github.ts  metrics.ts  parser.ts
